--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app/index.js",
+    "dev": "nodemon app/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -21,5 +21,6 @@
     "node",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "type":"module"
 }
